--- a/Assoziationsanalyse.Rmd
+++ b/Assoziationsanalyse.Rmd
@@ -4,13 +4,22 @@ output: html_notebook
 ---
 Libraries Importieren
 ```{r}
-library(cluster)
+library(arules)
 library(readr)
 ```
 CSV Importieren mit zusammengefügten und gereinigten Daten
 ```{r}
-Books <- read_delim("alle.csv", 
+books <- read_delim("alle.csv", 
     ";", escape_backslash = TRUE, escape_double = FALSE, 
     trim_ws = TRUE)
+```
+
+Speicherung in der Struktur transactions
+```{r}
+trans <- as(books, "transactions")
+```
+
+```{r}
+as(trans, "matrix")
 ```
 
